feat(deploy): config to deploy

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun --watch index.ts"
+    "dev": "bun --watch ./api/index.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
