refactor: ready for demo

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "bun --watch ./api/index.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/express": "^5.0.5"
   },
   "peerDependencies": {
     "typescript": "^5"
